// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should allow enums 1`] = `
Array [
  Object {
    "testFile.proto": Object {
      "proto": "
syntax=\\"proto2\\";

            

enum PurchaseCategory {
	UNCATEGORIZED = 1;
	GAS = 2;
	DINING = 3;
	TRAVEL = 4;
	GROCERY = 5;
	ENTERTAINMENT = 6;
}
    

",
    },
  },
  Object {
    "files": Array [
      Object {
        "children": Object {
          "Function": Array [],
          "Import": Array [],
        },
        "inFileScope": Map {
          "PurchaseCategory" => Object {
            "children": Object {
              "EnumMember": Array [
                Object {
                  "kind": "EnumMember",
                  "loc": Object {
                    "endColNumber": 22,
                    "endLineNumber": 2,
                    "startColNumber": 27,
                    "startLineNumber": 1,
                  },
                  "name": "UNCATEGORIZED",
                },
                Object {
                  "kind": "EnumMember",
                  "loc": Object {
                    "endColNumber": 12,
                    "endLineNumber": 3,
                    "startColNumber": 22,
                    "startLineNumber": 2,
                  },
                  "name": "GAS",
                },
                Object {
                  "kind": "EnumMember",
                  "loc": Object {
                    "endColNumber": 15,
                    "endLineNumber": 4,
                    "startColNumber": 12,
                    "startLineNumber": 3,
                  },
                  "name": "DINING",
                },
                Object {
                  "kind": "EnumMember",
                  "loc": Object {
                    "endColNumber": 15,
                    "endLineNumber": 5,
                    "startColNumber": 15,
                    "startLineNumber": 4,
                  },
                  "name": "TRAVEL",
                },
                Object {
                  "kind": "EnumMember",
                  "loc": Object {
                    "endColNumber": 16,
                    "endLineNumber": 6,
                    "startColNumber": 15,
                    "startLineNumber": 5,
                  },
                  "name": "GROCERY",
                },
                Object {
                  "kind": "EnumMember",
                  "loc": Object {
                    "endColNumber": 22,
                    "endLineNumber": 7,
                    "startColNumber": 16,
                    "startLineNumber": 6,
                  },
                  "name": "ENTERTAINMENT",
                },
              ],
            },
            "kind": "Enum",
            "loc": Object {
              "endColNumber": 27,
              "endLineNumber": 1,
              "startColNumber": 0,
              "startLineNumber": 0,
            },
            "name": "PurchaseCategory",
          },
        },
        "kind": "File",
        "loc": FileLocation {
          "dir": "",
          "fullname": "testFile.cdt",
          "name": "testFile.cdt",
        },
      },
    ],
    "service": Object {
      "functions": Array [],
      "kind": "public",
    },
  },
]
`;

exports[`should allow enums separated by whitespace 1`] = `
Array [
  Object {
    "testFile.proto": Object {
      "proto": "
syntax=\\"proto2\\";

            

enum PurchaseCategory {
	UNCATEGORIZED = 1;
	GAS = 2;
	DINING = 3;
	TRAVEL = 4;
	GROCERY = 5;
	ENTERTAINMENT = 6;
}
    

",
    },
  },
  Object {
    "files": Array [
      Object {
        "children": Object {
          "Function": Array [],
          "Import": Array [],
        },
        "inFileScope": Map {
          "PurchaseCategory" => Object {
            "children": Object {
              "EnumMember": Array [
                Object {
                  "kind": "EnumMember",
                  "loc": Object {
                    "endColNumber": 0,
                    "endLineNumber": 3,
                    "startColNumber": 27,
                    "startLineNumber": 1,
                  },
                  "name": "UNCATEGORIZED",
                },
                Object {
                  "kind": "EnumMember",
                  "loc": Object {
                    "endColNumber": 0,
                    "endLineNumber": 4,
                    "startColNumber": 0,
                    "startLineNumber": 3,
                  },
                  "name": "GAS",
                },
                Object {
                  "kind": "EnumMember",
                  "loc": Object {
                    "endColNumber": 0,
                    "endLineNumber": 5,
                    "startColNumber": 0,
                    "startLineNumber": 4,
                  },
                  "name": "DINING",
                },
                Object {
                  "kind": "EnumMember",
                  "loc": Object {
                    "endColNumber": 0,
                    "endLineNumber": 6,
                    "startColNumber": 0,
                    "startLineNumber": 5,
                  },
                  "name": "TRAVEL",
                },
                Object {
                  "kind": "EnumMember",
                  "loc": Object {
                    "endColNumber": 0,
                    "endLineNumber": 7,
                    "startColNumber": 0,
                    "startLineNumber": 6,
                  },
                  "name": "GROCERY",
                },
                Object {
                  "kind": "EnumMember",
                  "loc": Object {
                    "endColNumber": 0,
                    "endLineNumber": 8,
                    "startColNumber": 0,
                    "startLineNumber": 7,
                  },
                  "name": "ENTERTAINMENT",
                },
              ],
            },
            "kind": "Enum",
            "loc": Object {
              "endColNumber": 27,
              "endLineNumber": 1,
              "startColNumber": 0,
              "startLineNumber": 0,
            },
            "name": "PurchaseCategory",
          },
        },
        "kind": "File",
        "loc": FileLocation {
          "dir": "",
          "fullname": "testFile.cdt",
          "name": "testFile.cdt",
        },
      },
    ],
    "service": Object {
      "functions": Array [],
      "kind": "public",
    },
  },
]
`;

exports[`should allow multiple enums separated by whitespace 1`] = `
Array [
  Object {
    "testFile.proto": Object {
      "proto": "
syntax=\\"proto2\\";

            

enum PurchaseCategory {
	UNCATEGORIZED = 1;
	GAS = 2;
	DINING = 3;
	TRAVEL = 4;
	GROCERY = 5;
	ENTERTAINMENT = 6;
}
    


enum OtherCategories {
	A = 1;
	B = 2;
	C = 3;
}
    

",
    },
  },
  Object {
    "files": Array [
      Object {
        "children": Object {
          "Function": Array [],
          "Import": Array [],
        },
        "inFileScope": Map {
          "PurchaseCategory" => Object {
            "children": Object {
              "EnumMember": Array [
                Object {
                  "kind": "EnumMember",
                  "loc": Object {
                    "endColNumber": 0,
                    "endLineNumber": 3,
                    "startColNumber": 27,
                    "startLineNumber": 1,
                  },
                  "name": "UNCATEGORIZED",
                },
                Object {
                  "kind": "EnumMember",
                  "loc": Object {
                    "endColNumber": 0,
                    "endLineNumber": 4,
                    "startColNumber": 0,
                    "startLineNumber": 3,
                  },
                  "name": "GAS",
                },
                Object {
                  "kind": "EnumMember",
                  "loc": Object {
                    "endColNumber": 0,
                    "endLineNumber": 5,
                    "startColNumber": 0,
                    "startLineNumber": 4,
                  },
                  "name": "DINING",
                },
                Object {
                  "kind": "EnumMember",
                  "loc": Object {
                    "endColNumber": 0,
                    "endLineNumber": 6,
                    "startColNumber": 0,
                    "startLineNumber": 5,
                  },
                  "name": "TRAVEL",
                },
                Object {
                  "kind": "EnumMember",
                  "loc": Object {
                    "endColNumber": 0,
                    "endLineNumber": 7,
                    "startColNumber": 0,
                    "startLineNumber": 6,
                  },
                  "name": "GROCERY",
                },
                Object {
                  "kind": "EnumMember",
                  "loc": Object {
                    "endColNumber": 0,
                    "endLineNumber": 8,
                    "startColNumber": 0,
                    "startLineNumber": 7,
                  },
                  "name": "ENTERTAINMENT",
                },
              ],
            },
            "kind": "Enum",
            "loc": Object {
              "endColNumber": 27,
              "endLineNumber": 1,
              "startColNumber": 0,
              "startLineNumber": 0,
            },
            "name": "PurchaseCategory",
          },
          "OtherCategories" => Object {
            "children": Object {
              "EnumMember": Array [
                Object {
                  "kind": "EnumMember",
                  "loc": Object {
                    "endColNumber": 0,
                    "endLineNumber": 12,
                    "startColNumber": 26,
                    "startLineNumber": 10,
                  },
                  "name": "A",
                },
                Object {
                  "kind": "EnumMember",
                  "loc": Object {
                    "endColNumber": 0,
                    "endLineNumber": 13,
                    "startColNumber": 0,
                    "startLineNumber": 12,
                  },
                  "name": "B",
                },
                Object {
                  "kind": "EnumMember",
                  "loc": Object {
                    "endColNumber": 0,
                    "endLineNumber": 14,
                    "startColNumber": 0,
                    "startLineNumber": 13,
                  },
                  "name": "C",
                },
              ],
            },
            "kind": "Enum",
            "loc": Object {
              "endColNumber": 26,
              "endLineNumber": 10,
              "startColNumber": 5,
              "startLineNumber": 8,
            },
            "name": "OtherCategories",
          },
        },
        "kind": "File",
        "loc": FileLocation {
          "dir": "",
          "fullname": "testFile.cdt",
          "name": "testFile.cdt",
        },
      },
    ],
    "service": Object {
      "functions": Array [],
      "kind": "public",
    },
  },
]
`;

exports[`should allow new line to end field 1`] = `
Array [
  Object {
    "testFile.proto": Object {
      "proto": "
syntax=\\"proto2\\";

            


message MyMessage {
	optional double d = 1;
	required float f = 2;
	optional int32 i32 = 3;
	optional int64 I = 4;
	optional uint32 u32 = 5;
	optional uint64 u64 = 6;
	required sint32 s32 = 7;
	optional sint64 s64 = 8;
	optional fixed32 f32 = 9;
	optional fixed64 f64 = 10;
	optional sfixed32 sf32 = 11;
	optional sfixed64 sf64 = 12;
	optional bool b = 13;
	optional string s = 14;
	optional bytes bs = 15;
}
",
    },
  },
  Object {
    "files": Array [
      Object {
        "children": Object {
          "Function": Array [],
          "Import": Array [],
        },
        "inFileScope": Map {
          "MyMessage" => Object {
            "children": Object {
              "Field": Array [
                Object {
                  "isRequired": false,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 17,
                    "endLineNumber": 2,
                    "startColNumber": 23,
                    "startLineNumber": 1,
                  },
                  "name": "d",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 3,
                    "startColNumber": 0,
                    "startLineNumber": 3,
                  },
                  "name": "f",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": false,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 17,
                    "endLineNumber": 4,
                    "startColNumber": 0,
                    "startLineNumber": 4,
                  },
                  "name": "i32",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": false,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 17,
                    "endLineNumber": 5,
                    "startColNumber": 0,
                    "startLineNumber": 5,
                  },
                  "name": "I",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": false,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 17,
                    "endLineNumber": 6,
                    "startColNumber": 0,
                    "startLineNumber": 6,
                  },
                  "name": "u32",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": false,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 17,
                    "endLineNumber": 7,
                    "startColNumber": 0,
                    "startLineNumber": 7,
                  },
                  "name": "u64",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 8,
                    "startColNumber": 0,
                    "startLineNumber": 8,
                  },
                  "name": "s32",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": false,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 17,
                    "endLineNumber": 9,
                    "startColNumber": 0,
                    "startLineNumber": 9,
                  },
                  "name": "s64",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": false,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 17,
                    "endLineNumber": 10,
                    "startColNumber": 0,
                    "startLineNumber": 10,
                  },
                  "name": "f32",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": false,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 17,
                    "endLineNumber": 11,
                    "startColNumber": 0,
                    "startLineNumber": 11,
                  },
                  "name": "f64",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": false,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 17,
                    "endLineNumber": 12,
                    "startColNumber": 0,
                    "startLineNumber": 12,
                  },
                  "name": "sf32",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": false,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 17,
                    "endLineNumber": 13,
                    "startColNumber": 0,
                    "startLineNumber": 13,
                  },
                  "name": "sf64",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": false,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 17,
                    "endLineNumber": 14,
                    "startColNumber": 0,
                    "startLineNumber": 14,
                  },
                  "name": "b",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": false,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 17,
                    "endLineNumber": 15,
                    "startColNumber": 0,
                    "startLineNumber": 15,
                  },
                  "name": "s",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": false,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 17,
                    "endLineNumber": 16,
                    "startColNumber": 0,
                    "startLineNumber": 16,
                  },
                  "name": "bs",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
              ],
            },
            "kind": "Message",
            "loc": Object {
              "endColNumber": 23,
              "endLineNumber": 1,
              "startColNumber": 0,
              "startLineNumber": 0,
            },
            "name": "MyMessage",
          },
        },
        "kind": "File",
        "loc": FileLocation {
          "dir": "",
          "fullname": "testFile.cdt",
          "name": "testFile.cdt",
        },
      },
    ],
    "service": Object {
      "functions": Array [],
      "kind": "public",
    },
  },
]
`;

exports[`should allow one message to reference another 1`] = `
Array [
  Object {
    "testFile.proto": Object {
      "proto": "
syntax=\\"proto2\\";

            


message m1 {
	required double d = 1;
	required float f = 2;
	required int32 i32 = 3;
	required int64 I = 4;
	required uint32 u32 = 5;
	required uint64 u64 = 6;
}


message m2 {
	required sint32 s32 = 1;
	required m1 myMessag = 2;
}
",
    },
  },
  Object {
    "files": Array [
      Object {
        "children": Object {
          "Function": Array [],
          "Import": Array [],
        },
        "inFileScope": Map {
          "m1" => Object {
            "children": Object {
              "Field": Array [
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 2,
                    "startColNumber": 16,
                    "startLineNumber": 1,
                  },
                  "name": "d",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 3,
                    "startColNumber": 17,
                    "startLineNumber": 2,
                  },
                  "name": "f",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 4,
                    "startColNumber": 16,
                    "startLineNumber": 3,
                  },
                  "name": "i32",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 5,
                    "startColNumber": 18,
                    "startLineNumber": 4,
                  },
                  "name": "I",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 6,
                    "startColNumber": 16,
                    "startLineNumber": 5,
                  },
                  "name": "u32",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 7,
                    "startColNumber": 19,
                    "startLineNumber": 6,
                  },
                  "name": "u64",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
              ],
            },
            "kind": "Message",
            "loc": Object {
              "endColNumber": 16,
              "endLineNumber": 1,
              "startColNumber": 0,
              "startLineNumber": 0,
            },
            "name": "m1",
          },
          "m2" => Object {
            "children": Object {
              "Field": Array [
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 10,
                    "startColNumber": 15,
                    "startLineNumber": 9,
                  },
                  "name": "s32",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 11,
                    "startColNumber": 19,
                    "startLineNumber": 10,
                  },
                  "name": "myMessag",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
              ],
            },
            "kind": "Message",
            "loc": Object {
              "endColNumber": 15,
              "endLineNumber": 9,
              "startColNumber": 5,
              "startLineNumber": 8,
            },
            "name": "m2",
          },
        },
        "kind": "File",
        "loc": FileLocation {
          "dir": "",
          "fullname": "testFile.cdt",
          "name": "testFile.cdt",
        },
      },
    ],
    "service": Object {
      "functions": Array [],
      "kind": "public",
    },
  },
]
`;

exports[`should allow the specification of optional fields 1`] = `
Array [
  Object {
    "testFile.proto": Object {
      "proto": "
syntax=\\"proto2\\";

            


message MyMessage {
	optional double d = 1;
	optional float f = 2;
	optional int32 i32 = 3;
	optional int64 I = 4;
	optional uint32 u32 = 5;
	optional uint64 u64 = 6;
	optional sint32 s32 = 7;
	optional sint64 s64 = 8;
	optional fixed32 f32 = 9;
	optional fixed64 f64 = 10;
	optional sfixed32 sf32 = 11;
	optional sfixed64 sf64 = 12;
	optional bool b = 13;
	optional string s = 14;
	optional bytes bs = 15;
}
",
    },
  },
  Object {
    "files": Array [
      Object {
        "children": Object {
          "Function": Array [],
          "Import": Array [],
        },
        "inFileScope": Map {
          "MyMessage" => Object {
            "children": Object {
              "Field": Array [
                Object {
                  "isRequired": false,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 17,
                    "endLineNumber": 2,
                    "startColNumber": 23,
                    "startLineNumber": 1,
                  },
                  "name": "d",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": false,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 17,
                    "endLineNumber": 3,
                    "startColNumber": 26,
                    "startLineNumber": 2,
                  },
                  "name": "f",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": false,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 17,
                    "endLineNumber": 4,
                    "startColNumber": 25,
                    "startLineNumber": 3,
                  },
                  "name": "i32",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": false,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 17,
                    "endLineNumber": 5,
                    "startColNumber": 27,
                    "startLineNumber": 4,
                  },
                  "name": "I",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": false,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 17,
                    "endLineNumber": 6,
                    "startColNumber": 25,
                    "startLineNumber": 5,
                  },
                  "name": "u32",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": false,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 17,
                    "endLineNumber": 7,
                    "startColNumber": 28,
                    "startLineNumber": 6,
                  },
                  "name": "u64",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": false,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 17,
                    "endLineNumber": 8,
                    "startColNumber": 28,
                    "startLineNumber": 7,
                  },
                  "name": "s32",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": false,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 17,
                    "endLineNumber": 9,
                    "startColNumber": 28,
                    "startLineNumber": 8,
                  },
                  "name": "s64",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": false,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 17,
                    "endLineNumber": 10,
                    "startColNumber": 28,
                    "startLineNumber": 9,
                  },
                  "name": "f32",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": false,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 17,
                    "endLineNumber": 11,
                    "startColNumber": 29,
                    "startLineNumber": 10,
                  },
                  "name": "f64",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": false,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 17,
                    "endLineNumber": 12,
                    "startColNumber": 29,
                    "startLineNumber": 11,
                  },
                  "name": "sf32",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": false,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 17,
                    "endLineNumber": 13,
                    "startColNumber": 31,
                    "startLineNumber": 12,
                  },
                  "name": "sf64",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": false,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 17,
                    "endLineNumber": 14,
                    "startColNumber": 31,
                    "startLineNumber": 13,
                  },
                  "name": "b",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": false,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 17,
                    "endLineNumber": 15,
                    "startColNumber": 24,
                    "startLineNumber": 14,
                  },
                  "name": "s",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": false,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 17,
                    "endLineNumber": 16,
                    "startColNumber": 26,
                    "startLineNumber": 15,
                  },
                  "name": "bs",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
              ],
            },
            "kind": "Message",
            "loc": Object {
              "endColNumber": 23,
              "endLineNumber": 1,
              "startColNumber": 0,
              "startLineNumber": 0,
            },
            "name": "MyMessage",
          },
        },
        "kind": "File",
        "loc": FileLocation {
          "dir": "",
          "fullname": "testFile.cdt",
          "name": "testFile.cdt",
        },
      },
    ],
    "service": Object {
      "functions": Array [],
      "kind": "public",
    },
  },
]
`;

exports[`should convert multiple conduit into proto2 1`] = `
Array [
  Object {
    "testFile.proto": Object {
      "proto": "
syntax=\\"proto2\\";

            


message m1 {
	required double d = 1;
	required float f = 2;
	required int32 i32 = 3;
	required int64 I = 4;
	required uint32 u32 = 5;
	required uint64 u64 = 6;
}


message m2 {
	required sint32 s32 = 1;
	required sint64 s64 = 2;
	required fixed32 f32 = 3;
	required fixed64 f64 = 4;
	required sfixed32 sf32 = 5;
	required sfixed64 sf64 = 6;
	required bool b = 7;
	required string s = 8;
	required bytes bs = 9;
}
",
    },
  },
  Object {
    "files": Array [
      Object {
        "children": Object {
          "Function": Array [],
          "Import": Array [],
        },
        "inFileScope": Map {
          "m1" => Object {
            "children": Object {
              "Field": Array [
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 2,
                    "startColNumber": 16,
                    "startLineNumber": 1,
                  },
                  "name": "d",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 3,
                    "startColNumber": 17,
                    "startLineNumber": 2,
                  },
                  "name": "f",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 4,
                    "startColNumber": 16,
                    "startLineNumber": 3,
                  },
                  "name": "i32",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 5,
                    "startColNumber": 18,
                    "startLineNumber": 4,
                  },
                  "name": "I",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 6,
                    "startColNumber": 16,
                    "startLineNumber": 5,
                  },
                  "name": "u32",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 7,
                    "startColNumber": 19,
                    "startLineNumber": 6,
                  },
                  "name": "u64",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
              ],
            },
            "kind": "Message",
            "loc": Object {
              "endColNumber": 16,
              "endLineNumber": 1,
              "startColNumber": 0,
              "startLineNumber": 0,
            },
            "name": "m1",
          },
          "m2" => Object {
            "children": Object {
              "Field": Array [
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 10,
                    "startColNumber": 15,
                    "startLineNumber": 9,
                  },
                  "name": "s32",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 11,
                    "startColNumber": 19,
                    "startLineNumber": 10,
                  },
                  "name": "s64",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 12,
                    "startColNumber": 19,
                    "startLineNumber": 11,
                  },
                  "name": "f32",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 13,
                    "startColNumber": 20,
                    "startLineNumber": 12,
                  },
                  "name": "f64",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 14,
                    "startColNumber": 20,
                    "startLineNumber": 13,
                  },
                  "name": "sf32",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 15,
                    "startColNumber": 22,
                    "startLineNumber": 14,
                  },
                  "name": "sf64",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 16,
                    "startColNumber": 22,
                    "startLineNumber": 15,
                  },
                  "name": "b",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 17,
                    "startColNumber": 15,
                    "startLineNumber": 16,
                  },
                  "name": "s",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 18,
                    "startColNumber": 17,
                    "startLineNumber": 17,
                  },
                  "name": "bs",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
              ],
            },
            "kind": "Message",
            "loc": Object {
              "endColNumber": 15,
              "endLineNumber": 9,
              "startColNumber": 5,
              "startLineNumber": 8,
            },
            "name": "m2",
          },
        },
        "kind": "File",
        "loc": FileLocation {
          "dir": "",
          "fullname": "testFile.cdt",
          "name": "testFile.cdt",
        },
      },
    ],
    "service": Object {
      "functions": Array [],
      "kind": "public",
    },
  },
]
`;

exports[`should convert simple conduit into proto2 1`] = `
Array [
  Object {
    "testFile.proto": Object {
      "proto": "
syntax=\\"proto2\\";

            


message MyMessage {
	required double d = 1;
	required float f = 2;
	required int32 i32 = 3;
	required int64 I = 4;
	required uint32 u32 = 5;
	required uint64 u64 = 6;
	required sint32 s32 = 7;
	required sint64 s64 = 8;
	required fixed32 f32 = 9;
	required fixed64 f64 = 10;
	required sfixed32 sf32 = 11;
	required sfixed64 sf64 = 12;
	required bool b = 13;
	required string s = 14;
	required bytes bs = 15;
}
",
    },
  },
  Object {
    "files": Array [
      Object {
        "children": Object {
          "Function": Array [],
          "Import": Array [],
        },
        "inFileScope": Map {
          "MyMessage" => Object {
            "children": Object {
              "Field": Array [
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 2,
                    "startColNumber": 23,
                    "startLineNumber": 1,
                  },
                  "name": "d",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 3,
                    "startColNumber": 17,
                    "startLineNumber": 2,
                  },
                  "name": "f",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 4,
                    "startColNumber": 16,
                    "startLineNumber": 3,
                  },
                  "name": "i32",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 5,
                    "startColNumber": 18,
                    "startLineNumber": 4,
                  },
                  "name": "I",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 6,
                    "startColNumber": 16,
                    "startLineNumber": 5,
                  },
                  "name": "u32",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 7,
                    "startColNumber": 19,
                    "startLineNumber": 6,
                  },
                  "name": "u64",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 8,
                    "startColNumber": 19,
                    "startLineNumber": 7,
                  },
                  "name": "s32",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 9,
                    "startColNumber": 19,
                    "startLineNumber": 8,
                  },
                  "name": "s64",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 10,
                    "startColNumber": 19,
                    "startLineNumber": 9,
                  },
                  "name": "f32",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 11,
                    "startColNumber": 20,
                    "startLineNumber": 10,
                  },
                  "name": "f64",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 12,
                    "startColNumber": 20,
                    "startLineNumber": 11,
                  },
                  "name": "sf32",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 13,
                    "startColNumber": 22,
                    "startLineNumber": 12,
                  },
                  "name": "sf64",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 14,
                    "startColNumber": 22,
                    "startLineNumber": 13,
                  },
                  "name": "b",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 15,
                    "startColNumber": 15,
                    "startLineNumber": 14,
                  },
                  "name": "s",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
                Object {
                  "isRequired": true,
                  "kind": "Field",
                  "loc": Object {
                    "endColNumber": 8,
                    "endLineNumber": 16,
                    "startColNumber": 17,
                    "startLineNumber": 15,
                  },
                  "name": "bs",
                  "part": Object {
                    "FieldType": Object {
                      "differentiate": [Function],
                      "kind": "FieldType",
                    },
                  },
                },
              ],
            },
            "kind": "Message",
            "loc": Object {
              "endColNumber": 23,
              "endLineNumber": 1,
              "startColNumber": 0,
              "startLineNumber": 0,
            },
            "name": "MyMessage",
          },
        },
        "kind": "File",
        "loc": FileLocation {
          "dir": "",
          "fullname": "testFile.cdt",
          "name": "testFile.cdt",
        },
      },
    ],
    "service": Object {
      "functions": Array [],
      "kind": "public",
    },
  },
]
`;
